iUpdated some documentation and resolved deprecated API calls.